--- a/index.html
+++ b/index.html
@@ -10,12 +10,74 @@
   <body>
     <main>
       <header>
-        <h1>Lækre tripple chocolate cookies</h1>
+        <h1>Tripple Chocolate Cookies</h1>
       </header>
-      <nav>Ingridienser</nav>
-      <article>Billede</article>
-      <aside>Tips</aside>
-      <footer>Fremgangsmåde</footer>
+      <nav>
+        <strong> Ingredienser</strong>
+        <li>Brun farin (ca 1½ dl)</li>
+        <li>Blødt smør</li>
+        <li>Groft salt</li>
+        <li>Æg</li>
+        <li>Mørk chokolade (ca. 55% kakao) - smeltet</li>
+        <li>Hvedemel (ca 2½ dl)</li>
+        <li>Vaniljesukker</li>
+        <li>Bagepulver</li>
+        <li>Grofthakket mørk chokolade (ca. 70% kakao)</li>
+        <li>Grofthakket hvid chokolade</li>
+      </nav>
+      <article>
+        <img
+          src="https://live.staticflickr.com/3593/4555899449_cac0d088b1_b.jpg"
+          alt=""
+        />
+      </article>
+      <aside>
+        <strong>Tips: </strong>
+        kan fryse dejen, efter du har formet den til kugler. Lad dejkuglerne tø
+        ca. ½ time, inden du bager de 18 cookies.
+      </aside>
+      <footer>
+        <strong> Sådan gør du:</strong>
+        <ol>
+          <li><lo> Rør farin, smør og salt godt sammen.</lo></li>
+          <li><lo> Rør æg og herefter smeltet chokolade i.</lo></li>
+          <li>
+            <lo>
+              Bland hvedemel, vanilje og bagepulver og vend det i
+              smørblandingen.</lo
+            >
+          </li>
+
+          <li><lo> Tilsæt det hakkede chokolade</lo></li>
+          <li><lo> Del dejen i 18 stykker og form dem til kugler.</lo></li>
+          <li>
+            <lo> Sæt kuglerne på 2 plader med bagepapir - tryk dem let.</lo>
+          </li>
+          <li>
+            <lo
+              >Kagerne flyder en del ud, så sørg for at der er god plads imellem
+              dem.
+            </lo>
+          </li>
+          <li>
+            <lo> Bag kagerne til de er sprøde i kanten, men bløde i midten.</lo>
+          </li>
+          <li>
+            <lo>
+              Træk bagepapiret med kagerne af bagepladen og lad dem af køle et
+              par minutter på bagepapiret.</lo
+            >
+          </li>
+          <li>
+            <Lo>
+              Lad herefter kagerne afkøle på en rist - brug en paletkniv til at
+              flytte dem over på risten.</Lo
+            >
+          </li>
+        </ol>
+        <p><strong> Bagetid: </strong></p>
+        <li>Ca 15 min ved 160°- varmeluft</li>
+      </footer>
     </main>
   </body>
 </html>
